<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pic1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="37dp"
            android:contentDescription="@string/theheada"
            android:scaleType="fitXY"
            android:src="@drawable/theheada"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/theheadb"
            android:scaleType="fitXY"
            android:src="@drawable/theheadb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="45dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="45dp"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="368dp"
            android:contentDescription="@string/theheadc"
            android:scaleType="fitXY"
            android:src="@drawable/theheadc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="368dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/theheadd"
            android:scaleType="fitXY"
            android:src="@drawable/theheadd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="45dp"
            android:layout_marginTop="600dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="37dp"
            android:text="@string/description1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>




